Fixed visibility on checkboxes

--- a/style.css
+++ b/style.css
@@ -1,5 +1,4 @@
-
-input[type=checkbox] {
+.checkbox-slider input[type=checkbox] {
 	visibility: hidden;
 }
 
